# ml-assignments

./: README.md
a1/: main.ipynb  pyproject.toml
a2/: .gitignore  ID3.py  main.ipynb  pyproject.toml  rf_tree.html
a2/data/: 221.csv  230.csv
a3/: 2022A7PS1358H.ipynb  main.ipynb  readme.txt  requirements.txt
a4/: main.ipynb  package-lock.json  requirements.txt
a4/backend/: app.py  custom_perceptron.py  custom_perceptron_model.pkl  diabetes.csv  naive_bayes_model.pkl  perceptron_model.pkl
a4/backend/templates/: index.html
a5/: main.ipynb
